--- a/server/src/static/styles.css
+++ b/server/src/static/styles.css
@@ -1,16 +1,7 @@
 /* General */
-* {
-    user-select: none;
-}
 body {
     margin: 0;
     padding: 0;
-}
-.main div {
-    position: block;
-    margin: auto;
-    text-align: center;
-    width: 50%;
 }
 
 /* Navbar */
@@ -21,7 +12,7 @@ body {
     height: 6rem;
     background-color: rgba(224, 182, 228, 0.712);
     border-radius: 10px;
-    box-shadow: 0px 6px 6px rgb(230, 197, 197);
+    box-shadow: 0px 6px 6px rgba(213, 178, 216, 0.829);
 }
 .navbar table {
     margin-left: auto;
@@ -46,7 +37,7 @@ body {
 }
 #title {
     transform: scale(1);
-    margin-right: 66rem;
+    margin-right: 75rem;
     font-size: 4rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -55,7 +46,16 @@ body {
 .main {
     margin-top: 1rem;
     margin-left: 1rem;
+
     font-family: Cascadia Code;
+    text-align: left;
+}
+/* Editor */
+#editor {
+    text-align: left;
+    height: 75%;
+    width: 85%;
+    border: black 2px;
 }
 .variable_error {
     color: lightblue;
